# distributed_file_store

./: .gitignore  Cargo.toml  README.md  generate_data.sh
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml
metadata-server/: Cargo.toml
metadata-server/src/: config.rs  main.rs  service.rs
proto/: Cargo.toml  build.rs
proto/src/: lib.rs
proto/src/proto/: common.proto  metadata.proto  storage.proto
storage-server/: Cargo.toml
storage-server/config/: config.toml
storage-server/src/: config.rs  main.rs  service.rs
test-client/: Cargo.toml
test-client/src/: main.rs
test-metadata-server/: Cargo.toml
test-metadata-server/src/: config.rs  main.rs  service.rs
