[package]
name = "storage-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "storage-server"
path = "src/main.rs"

[dependencies]
proto = { path = "../proto" }
common = { path = "../common" }
tonic = "0.10"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
config = "0.13"